<?xml version="1.0"?>
<package format="3">
  <name>hm7_slam_pkg</name>
  <version>0.0.0</version>
  <description>HM7 custom SLAM mapping and wall follower for TurtleBot3</description>

  <maintainer email="student@example.com">student</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
